--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,15 @@
 @import "tw-animate-css";
 @plugin 'tailwind-scrollbar';
 
+.scrollbar-none::-webkit-scrollbar {
+  display: none;
+}
+
+.scrollbar-none {
+  -ms-overflow-style: none; /* IE dan Edge */
+  scrollbar-width: none; /* Firefox */
+}
+
 @custom-variant dark (&:is(.dark *));
 
 @theme inline {
